// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when fetching services loading spinner matches the snapshot 1`] = `
<tr>
  <td />
  <td
    colSpan={4}
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when fetching services loading spinner matches the snapshot 2`] = `
<tr>
  <td />
  <td
    colSpan={4}
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when there is a valid Service renders a simple view without IP 1`] = `
<tr>
  <td>
    foo
  </td>
  <td>
    ClusterIP
  </td>
  <td />
  <td>
    None
  </td>
  <td />
</tr>
`;

exports[`when there is a valid Service renders a view with IP 1`] = `
<tr>
  <td>
    foo
  </td>
  <td>
    LoadBalancer
  </td>
  <td />
  <td>
    1.2.3.4
  </td>
  <td>
    80/TCP
  </td>
</tr>
`;
